--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.1
   firebase_storage: ^13.0.2
+  flutter_local_notifications: ^19.4.2
 
 dev_dependencies:
   flutter_test:
