--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.5.1
   firebase_storage: ^13.0.2
   flutter_local_notifications: ^19.4.2
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
